@@ -1,3 +1,12 @@
+FROM V0.11 TO V0.12:
+========================
+- Korax's speed has been slightly increased, as has the speed and damage of his Ethereal Wraith magic.
+- Coop powerups for the villains have had their power slightly enhanced.
+- Villains now get CoopModeOn when playing in coop games.
+- Korax's Green/Brown Chaos Magics have been combined into one Chaos Serpent Magic.
+- Korax now has Steel Chain magic to grab enemies at long range and yank them over to him.
+- Team balancer now runs after 5 people join the game, and now only runs on the joining team.
+
 FROM V0.1 TO V0.11:
 ========================
 - Korax has been added as Parias' villain.
